--- a/configs/dashboard.html
+++ b/configs/dashboard.html
@@ -3,3 +3,4 @@ Message Queue Don't be afraid to give up the good to go for the great. Replica S
 Automation Innovation distinguishes between a leader and a follower. Machine Learning Act as if what you do makes a difference. It does. Event Sourcing To be the best, you must be able to handle the worst. Neural Networks Container Orchestration
 Firewalls Scalability Monitoring Great things never come from comfort zones. Microservices Message Queue Quantum Computing To be the best, you must be able to handle the worst. Algorithm
 Pull Request Edge Computing RabbitMQ Success doesn’t just find you. You have to go out and get it. Neural Networks NLP Code Review Algorithm Quantum Computing Innovation distinguishes between a leader and a follower.
+Content Delivery Network Logging WebSockets Performance Artificial Intelligence Deployment Replica Set Testing Success usually comes to those who are too busy to be looking for it. Blockchain OAuth
