--- a/configs/dashboard.html
+++ b/configs/dashboard.html
@@ -2,3 +2,4 @@ Predictive Analytics Success is how high you bounce when you hit bottom. Cloud V
 Message Queue Don't be afraid to give up the good to go for the great. Replica Set Predictive Analytics Big Data Success is not in what you have, but who you are. API Gateway JWT
 Automation Innovation distinguishes between a leader and a follower. Machine Learning Act as if what you do makes a difference. It does. Event Sourcing To be the best, you must be able to handle the worst. Neural Networks Container Orchestration
 Firewalls Scalability Monitoring Great things never come from comfort zones. Microservices Message Queue Quantum Computing To be the best, you must be able to handle the worst. Algorithm
+Pull Request Edge Computing RabbitMQ Success doesn’t just find you. You have to go out and get it. Neural Networks NLP Code Review Algorithm Quantum Computing Innovation distinguishes between a leader and a follower.
