--- a/configs/index.html
+++ b/configs/index.html
@@ -3,3 +3,4 @@ Great things never come from comfort zones. React Cloud Microservices DevOps Fro
 Container Orchestration Testing Optimization Happiness is not something ready made. It comes from your own actions. Big Data Message Queue Zero Downtime Deployment Kubernetes Cache Invalidation Latency Optimization
 Cloud Python CI/CD DevOps Big Data Content Delivery Network Server Response Microservices
 Do what you love and the money will follow. Success doesn’t just find you. You have to go out and get it. If you can dream it, you can do it. Logging API Message Queue Security DevOps
+React Latency Optimization Load Testing Sharding Great things never come from comfort zones. Innovation distinguishes between a leader and a follower. Load Balancing Automation WebSockets Success is how high you bounce when you hit bottom. Kubernetes
