--- a/configs/index.html
+++ b/configs/index.html
@@ -2,3 +2,4 @@ Scalability CI/CD Don't be afraid to give up the good to go for the great. Succe
 Great things never come from comfort zones. React Cloud Microservices DevOps Frontend Framework Simplicity is the ultimate sophistication. Stay hungry, stay foolish.
 Container Orchestration Testing Optimization Happiness is not something ready made. It comes from your own actions. Big Data Message Queue Zero Downtime Deployment Kubernetes Cache Invalidation Latency Optimization
 Cloud Python CI/CD DevOps Big Data Content Delivery Network Server Response Microservices
+Do what you love and the money will follow. Success doesn’t just find you. You have to go out and get it. If you can dream it, you can do it. Logging API Message Queue Security DevOps
