--- a/configs/index.html
+++ b/configs/index.html
@@ -1,3 +1,4 @@
 Scalability CI/CD Don't be afraid to give up the good to go for the great. Success doesn’t just find you. You have to go out and get it. DevOps Act as if what you do makes a difference. It does. API Gateway Dream big and dare to fail. Framework Data Pipeline Opportunities don't happen. You create them. Serverless
 Great things never come from comfort zones. React Cloud Microservices DevOps Frontend Framework Simplicity is the ultimate sophistication. Stay hungry, stay foolish.
 Container Orchestration Testing Optimization Happiness is not something ready made. It comes from your own actions. Big Data Message Queue Zero Downtime Deployment Kubernetes Cache Invalidation Latency Optimization
+Cloud Python CI/CD DevOps Big Data Content Delivery Network Server Response Microservices
