--- a/configs/dashboard.html
+++ b/configs/dashboard.html
@@ -1,1 +1,2 @@
 Predictive Analytics Success is how high you bounce when you hit bottom. Cloud Virtual Machines Do what you love and the money will follow. Load Testing Agile WebSockets Innovation distinguishes between a leader and a follower. UX Optimization Difficult roads often lead to beautiful destinations. Testing
+Message Queue Don't be afraid to give up the good to go for the great. Replica Set Predictive Analytics Big Data Success is not in what you have, but who you are. API Gateway JWT
