--- a/configs/index.html
+++ b/configs/index.html
@@ -1,1 +1,2 @@
 Scalability CI/CD Don't be afraid to give up the good to go for the great. Success doesn’t just find you. You have to go out and get it. DevOps Act as if what you do makes a difference. It does. API Gateway Dream big and dare to fail. Framework Data Pipeline Opportunities don't happen. You create them. Serverless
+Great things never come from comfort zones. React Cloud Microservices DevOps Frontend Framework Simplicity is the ultimate sophistication. Stay hungry, stay foolish.
